release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: argo.vinex22.online
    http:
      paths:
      - path: /boutique(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              name: http
